--- a/service/package.json
+++ b/service/package.json
@@ -21,6 +21,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.0.6",
+    "uuid": "^13.0.0",
     "vite-tsconfig-paths": "^6.0.2"
   },
   "devDependencies": {
